src/scss/components/Footer.scss
footer {
  background-color: $divider;
  padding: 10px 0 0;
  text-align: center;
  color: $white;

  .sign-up {
    position: relative;
    width: 85%;
    margin: 0 auto;
    padding: 0.75rem 0;
    background-color: $primary;
    border-radius: 8px;
    box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
    transition: all 0.3s cubic-bezier(0.25, 0.8, 0.25, 1);
    visibility: visible;
    top: -50px;
    z-index: 200;

    display: inline-grid;
    grid-template-columns: 1fr;
    text-align: left;

    &:hover {
      box-shadow: 0 14px 28px rgba(0, 0, 0, 0.25),
        0 10px 10px rgba(0, 0, 0, 0.22);
    }

    div {
      padding: 0 2rem;
    }

    .action {
      display: flex;
      justify-content: flex-end;
      align-items: center;

      a {
        text-decoration: none;
      }

      button {
        font-size: 1rem;
        font-weight: 700;
        border: 1.3px solid $white;
        border-color: $white;
        color: $white;

        &:hover {
          background-color: $accent;
        }
      }
    }

    @media only screen and (min-width: $mobile) {
      grid-template-columns: 4fr 1fr;
    }
  }

  .address {
    padding: 0 0 30px;
    line-height: 1.5rem;
  }

  .social-links {
    padding: 17px;
    display: inline-block;

    .icon {
      display: inline-block;
      font-size: 1.5rem;
      border-radius: 25px;
      min-width: 58px;
      margin: 0 auto;
      text-align: center;
      padding-top: 2px;

      a:link,
      a:visited {
        .fa-facebook-f {
          color: #3c5a99;
        }

        .fa-twitter {
          color: #1da1f2;
        }

        .fa-instagram {
          color: #c13584;
        }

        .fa-weixin {
          color: #09b83e;
        }
      }

      a:hover,
      a:active {
        .fa-facebook-f,
        .fa-twitter,
        .fa-instagram,
        .fa-weixin {
          color: $white;
        }
      }

      &:not(:last-child) {
        margin-right: 10px;
      }
    }
  }

  .copyright-text {
    margin-top: 30px;
    padding: 0 34px 10px;
  }

  .credits {
    padding: 7px 17px 37px;

    a {
      color: $white;
    }
  }
}

